--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
     </div>
   </header> <!--хедер страницы конец  -->
   <main class="container shadow"> <!--основной контейнер страницы -->
-    <div class="image-main">
-      <!-- изображение в шапке -->
+    <div class="image-main"><!-- изображение в шапке -->
     </div>
     <div class="features">
       <h1 class="big-text">Седона — небольшой городок в Аризоне, <span>заслуживающий большего!</span></h1>
@@ -48,17 +47,17 @@
         </div>
       </div>
       <ul class="features-item">
-        <li>
+        <li class="features-left-image">
           <b class="features-item-title">Жилье</b>
-          <p class="features-item-description">Рекомендуем пожить как в настоящем <span>мотеле, все как в кино!</span></p>
+          <p class="features-item-description text-gray">Рекомендуем пожить как в настоящем <span>мотеле, все как в кино!</span></p>
         </li>
-        <li>
+        <li class="features-center-image">
           <b class="features-item-title">Еда</b>
-          <p class="features-item-description">Всегда заказывайте фирменный бургер, <span>вы не разочаруетесь!</span></p>
+          <p class="features-item-description text-gray">Всегда заказывайте фирменный бургер, <span>вы не разочаруетесь!</span></p>
         </li>
-        <li>
+        <li class="features-right-image">
           <b class="features-item-title">Сувениры</b>
-          <p class="features-item-description">Не только китайского, <span>но и местного производства!</span></p>
+          <p class="features-item-description text-gray">Не только китайского, но и местного <span>производства!</span></p>
         </li>
       </ul>
       <div class="features-second">
@@ -66,65 +65,68 @@
           <img src="img/index/Features-bottom.jpg" width="800" height="256" alt="Canyon of Sedona">
         </div>
         <div class="features-second-text">
-          <h2><b>Там есть мост дьявола</b></h2>
-          <span>№2</span>
-          <p>Да, по нему можно пройтись, если вы осмелитесь</p>
+          <b>Там есть <span>мост дьявола</span></b>
+          <span class="number">№2</span>
+          <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
         </div>
       </div>
       <ul class="features-items-third-fifth">
         <li>
-          <b>Небольшая  <span>площадь</span></b>
+          <b class="features-item-title">Небольшая  <span>площадь</span></b>
           <span class="number">№3</span>
-          <p>Все достопримечательности находяться очень близко</p>
+          <p class="text-gray">Все достопримечательности <span>находяться очень близко</span></p>
         </li>
         <li>
-          <b>Красивая дорога</b>
-          <span>№4</span>
-          <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          <b class="features-item-title">Красивая дорога</b>
+          <span class="number">№4</span>
+          <p class="text-gray">Ехать в Седону из Лас-Вегаса совсем  <span>не скучно!</span></p>
         </li>
         <li>
-          <b>Мало туристов</b>
-          <span>№5</span>
-          <p>Большинство едет в Гранд-Каньон и толпится там</p>
+          <b class="features-item-title">Мало туристов</b>
+          <span class="number">№5</span>
+          <p class="text-gray">Большинство едет в Гранд-Каньон <span>и толпится там</span></p>
         </li>
       </ul>
       <div class="index-content"> <!-- блок поиска отелей начало -->
         <h2 class="index-content-title">Заинтересовались?</h2>
-        <p>Укажите предполагаемые даты поездки,<br>
+        <p class="text-gray">Укажите предполагаемые даты поездки,<br>
           и мы покажем вам лучшие предложения гостиниц в седоне </p>
           <a class="big-text search decoration" href="#">Поиск гостиниц в Седоне</a>
           <div class="index-search">
-            <form action="#" method="get">
-              <div class="form-group">
+            <form class="clearfix" name="select-item" action="#" method="get">
+              <div class="form-group data-first">
                 <label for="date-check-in">Дата заезда</label>
-                <input type="date" id="date-check-in">
+                <input class="field-date" type="date" id="date-check-in">
                 <i class="icon-calendar"></i>
               </div>
-              <div class="form-group">
+              <div class="form-group date-second">
                 <label for="date-check-out">Дата выезда</label>
-                <input type="date" id="date-check-out">
+                <input class="field-date" type="date" id="date-check-out">
                 <i class="icon-calendar"></i>
               </div>
-              <div class="form-group">
-                <button type="button">-</button>
+              <div class="form-group adults">
                 <label for="adult">Взрослые</label>
-                <input type="number" min="1" max="4" step="1" id="adult">
-                <button type="button">+</button>
+                <div class="form-group-controls">
+                  <button type="button">-</button>
+                  <input class="field-number" type="number" min="1" max="4" step="1" id="adult">
+                  <button type="button">+</button>
+                </div>
               </div>
-              <div class="form-group">
+              <div class="form-group kids">
                 <label for="child">Дети</label>
-                <button type="button">-</button>
-                <input type="number" min="1" max="4" step="1" id="child">
-                <button type="button">+</button>
+                <div class="form-group-controls">
+                  <button type="button">-</button>
+                  <input class="field-number" type="number" min="1" max="4" step="1" id="child">
+                  <button type="button">+</button>
+                </div>
               </div>
-              <div class="form-group">
+              <div class="form-group search-btn">
                 <input class="big-text search" type="submit" value="Найти">
               </div>
             </form>
           </div>
         </div><!-- блок поиска отелей конец -->
-        <div class="map">
-          <!--карта картинка-->
+        <div class="map"> <!--карта картинка-->
         </div>
       </div>
     </main>
@@ -145,4 +147,4 @@
       </div>
     </footer> <!--футер конец-->
   </body>
-  </html>
+</html>
