--- a/index.html
+++ b/index.html
@@ -31,10 +31,8 @@
     </div>
   </header> <!--хедер страницы конец  -->
   <main class="container shadow"> <!--основной контейнер страницы -->
-    <div class="image-main"><!-- изображение в шапке -->
-    </div>
     <div class="features">
-      <h1 class="big-text">Седона — небольшой городок в Аризоне, <span>заслуживающий большего!</span></h1>
+      <h1 class="big-text-features">Седона — небольшой городок в Аризоне, <span>заслуживающий большего!</span></h1>
       <p class="features-text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
       <div class="features-first">
         <div class="features-first-text">
@@ -133,7 +131,7 @@
     <footer class="main-footer"> <!--футер начало-->
       <div class="container block-footer">
         <div class="footer-contacts">
-          <a class="big-text" href="#">#Visitsedona</a>
+          <a class="big-text decoration" href="#">#Visitsedona</a>
         </div>
         <div class="footer-social">
           <a class="social-btn social-btn-tv" href="#">Твиттер</a>
@@ -142,7 +140,7 @@
         </div>
         <div class="footer-copyright">
           <span>Website by</span>
-          <a class="btn-logo" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
+          <a class="social-btn btn-logo" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
         </div>
       </div>
     </footer> <!--футер конец-->
