--- a/index.html
+++ b/index.html
@@ -105,17 +105,17 @@
               <div class="form-group adults">
                 <label for="adult">Взрослые</label>
                 <div class="form-group-controls">
-                  <button type="button">-</button>
+                  <button class="button-control" type="button">-</button>
                   <input class="field-number" type="number" min="1" max="4" step="1" id="adult">
-                  <button type="button">+</button>
+                  <button class="button-control" type="button">+</button>
                 </div>
               </div>
               <div class="form-group kids">
                 <label for="child">Дети</label>
                 <div class="form-group-controls">
-                  <button type="button">-</button>
+                  <button class="button-control" type="button">-</button>
                   <input class="field-number" type="number" min="1" max="4" step="1" id="child">
-                  <button type="button">+</button>
+                  <button class="button-control" type="button">+</button>
                 </div>
               </div>
               <div class="form-group search-btn">
