--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
           <p class="text-gray">Все достопримечательности <span>находяться очень близко</span></p>
         </li>
         <li>
-          <b class="features-item-title">Красивая дорога</b>
+          <b class="features-item-title">Красивая <span>дорога</span></b>
           <span class="number">№4</span>
           <p class="text-gray">Ехать в Седону из Лас-Вегаса совсем  <span>не скучно!</span></p>
         </li>
         <li>
-          <b class="features-item-title">Мало туристов</b>
+          <b class="features-item-title">Мало <span>туристов</span></b>
           <span class="number">№5</span>
           <p class="text-gray">Большинство едет в Гранд-Каньон <span>и толпится там</span></p>
         </li>
@@ -124,8 +124,6 @@
             </form>
           </div>
         </div><!-- блок поиска отелей конец -->
-        <div class="map"> <!--карта картинка-->
-        </div>
       </div>
     </main>
     <footer class="main-footer"> <!--футер начало-->
