--- a/hotels.html
+++ b/hotels.html
@@ -88,19 +88,19 @@
         <b>Сортировка:</b>
         <ul class="result-menu">
           <li>
-            <a class="decoration" href="#">По цене</a>
+            <a class="text-result-menu result-active" href="#">По цене</a>
           </li>
           <li>
-            <a href="#">По типу</a>
+            <a class="text-result-menu active-result-menu" href="#">По типу</a>
           </li>
           <li>
-            <a href="#">По рейтингу</a>
+            <a class="text-result-menu active-result-menu" href="#">По рейтингу</a>
           </li>
           <li>
-            <a href="#" title="По возрастанию">▲</a>
+            <a class="arrow-result-menu" href="#" title="По возрастанию">▲</a>
           </li>
           <li>
-            <a href="#" title="По убыванию">▼</a>
+            <a class="arrow-result-menu active-arrow" href="#" title="По убыванию">▼</a>
           </li>
         </ul>
       </div>
