--- a/css/img/Седона_ отели.html
+++ b/css/img/Седона_ отели.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="utf-8">
+<!-- saved from url=(0066)file:///C:/Users/Misha/Documents/GitHub/233300-sedona/hotels.html# -->
+<html lang="ru"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  
   <title>Седона: отели</title>
-  <link href="css/style.css" rel="stylesheet">
-  <link href="css/normalize.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic,cyrillic-ext" rel="stylesheet">
+  <link href="./Седона_ отели_files/style.css" rel="stylesheet">
+  <link href="./Седона_ отели_files/normalize.css" rel="stylesheet">
 </head>
 <body>
   <header class="main-header">     <!--хедер страницы  -->
@@ -13,13 +12,13 @@
       <nav class="main-navigation">          <!--Основная навигация  -->
         <ul class="header-menu">
           <li>
-            <a href="#">Информация</a>
+            <a href="file:///C:/Users/Misha/Documents/GitHub/233300-sedona/hotels.html#">Информация</a>
           </li>
           <li>
-            <a href="#">Фото и видео</a>
+            <a href="file:///C:/Users/Misha/Documents/GitHub/233300-sedona/hotels.html#">Фото и видео</a>
           </li>
           <li>
-            <a href="#">Карта штата</a>
+            <a href="file:///C:/Users/Misha/Documents/GitHub/233300-sedona/hotels.html#">Карта штата</a>
           </li>
           <li class="active">
             <a>Гостиницы</a>
@@ -27,14 +26,14 @@
         </ul>
       </nav>     <!--основная навигация конец  -->
       <div class="header-logo">   <!-- лого в шапке -->
-        <a  href="index.html"><img src="img/index/logo-header.png" width="138" height="70" alt="City of Sedona"></a>
+        <a href="file:///C:/Users/Misha/Documents/GitHub/233300-sedona/index.html"><img src="./Седона_ отели_files/logo-header.png" width="138" height="70" alt="City of Sedona"></a>
       </div>
     </div>
   </header> <!--хедер  конец  -->
   <main class="container"> <!--основной контейнер страницы -->
-    <div class= "selection">
+    <div class="selection">
       <div class="selection-left"> <!--сортировка -->
-        <form action="#" method="get">
+        <form action="file:///C:/Users/Misha/Documents/GitHub/233300-sedona/hotels.html#" method="get">
           <fieldset class="items-selection-title select-left">
             <legend>Инфраструктура:</legend>
             <div class="form-group">
@@ -89,32 +88,30 @@
         <b>Сортировка:</b>
         <ul class="result-menu">
           <li>
-            <a class="text-result-menu result-active" href="#">По цене</a>
+            <a class="text-result-menu result-active" href="file:///C:/Users/Misha/Documents/GitHub/233300-sedona/hotels.html#">По цене</a>
           </li>
           <li>
-            <a class="text-result-menu active-result-menu" href="#">По типу</a>
+            <a class="text-result-menu active-result-menu" href="file:///C:/Users/Misha/Documents/GitHub/233300-sedona/hotels.html#">По типу</a>
           </li>
           <li>
-            <a class="text-result-menu active-result-menu" href="#">По рейтингу</a>
-          </li>
-          <div class="arrow">
-          <li>
-            <a class="arrow-result-menu" href="#" title="По возрастанию">▲</a>
+            <a class="text-result-menu active-result-menu" href="file:///C:/Users/Misha/Documents/GitHub/233300-sedona/hotels.html#">По рейтингу</a>
           </li>
           <li>
-            <a class="arrow-result-menu active-arrow" href="#" title="По убыванию">▼</a>
+            <a class="arrow-result-menu" href="file:///C:/Users/Misha/Documents/GitHub/233300-sedona/hotels.html#" title="По возрастанию">▲</a>
           </li>
-        </div>
+          <li>
+            <a class="arrow-result-menu active-arrow" href="file:///C:/Users/Misha/Documents/GitHub/233300-sedona/hotels.html#" title="По убыванию">▼</a>
+          </li>
         </ul>
       </div>
       <article class="result-item clearfix">
         <div class="result-item-left">
-          <img src="img/hotels/hotels-top.jpg" width="135" height="90" alt="Amara Resort Spa">
+          <img src="./Седона_ отели_files/hotels-top.jpg" width="135" height="90" alt="Amara Resort Spa">
           <div class="result-item-text">
-            <h2 class="legend-result">Amara Resort & Spa</h2>
+            <h2 class="legend-result">Amara Resort &amp; Spa</h2>
             <p><span class="type-result">Гостиница</span><span class="price-result">от 4000 р.</span></p>
-            <a class="btn-info" href="#"><span>Подробнее</span></a>
-            <a class="btn-buy" href="#"><span>Забронировать</span></a>
+            <a class="btn-info" href="file:///C:/Users/Misha/Documents/GitHub/233300-sedona/hotels.html#">Подробнее</a>
+            <a class="btn-buy" href="file:///C:/Users/Misha/Documents/GitHub/233300-sedona/hotels.html#">Забронировать</a>
           </div>
         </div>
         <div class="star-rating">
@@ -124,12 +121,12 @@
       </article>
       <article class="result-item clearfix">
         <div class="result-item-left">
-          <img src="img/hotels/hotels-middle.jpg" width="135" height="90" alt="Desert Quail Inn">
+          <img src="./Седона_ отели_files/hotels-middle.jpg" width="135" height="90" alt="Desert Quail Inn">
           <div class="result-item-text">
             <h2 class="legend-result">Desert Quail Inn</h2>
             <p><span class="type-result">Мотель</span><span class="price-result">от 3000 р.</span></p>
-            <a class="btn-info" href="#"><span>Подробнее</span></a>
-            <a class="btn-buy" href="#"><span>Забронировать</span></a>
+            <a class="btn-info" href="file:///C:/Users/Misha/Documents/GitHub/233300-sedona/hotels.html#">Подробнее</a>
+            <a class="btn-buy" href="file:///C:/Users/Misha/Documents/GitHub/233300-sedona/hotels.html#">Забронировать</a>
           </div>
         </div>
         <div class="star-rating">
@@ -139,12 +136,12 @@
       </article>
       <article class="result-item clearfix">
         <div class="result-item-left">
-          <img src="img/hotels/hotels-bottom.jpg" width="135" height="90" alt="Villas At Poco Diablo">
+          <img src="./Седона_ отели_files/hotels-bottom.jpg" width="135" height="90" alt="Villas At Poco Diablo">
           <div class="result-item-text">
             <h2 class="legend-result">Villas at Poco Diablo</h2>
             <p><span class="type-result">Апартаменты</span><span class="price-result">от 2000 р.</span></p>
-            <a class="btn-info" href="#"><span>Подробнее</span></a>
-            <a class="btn-buy" href="#"><span>Забронировать</span></a>
+            <a class="btn-info" href="file:///C:/Users/Misha/Documents/GitHub/233300-sedona/hotels.html#">Подробнее</a>
+            <a class="btn-buy" href="file:///C:/Users/Misha/Documents/GitHub/233300-sedona/hotels.html#">Забронировать</a>
           </div>
         </div>
         <div class="star-rating">
@@ -157,18 +154,21 @@
   <footer class="main-footer"> <!--футер начало-->
     <div class="container block-footer">
       <div class="footer-contacts">
-        <a class="big-text" href="#">#Visitsedona</a>
+        <a class="big-text" href="file:///C:/Users/Misha/Documents/GitHub/233300-sedona/hotels.html#">#Visitsedona</a>
       </div>
       <div class="footer-social">
-        <a class="social-btn social-btn-tv" href="#">Твиттер</a>
-        <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-        <a class="social-btn social-btn-yt" href="#">Youtube</a>
+        <a class="social-btn social-btn-tv" href="file:///C:/Users/Misha/Documents/GitHub/233300-sedona/hotels.html#">Твиттер</a>
+        <a class="social-btn social-btn-fb" href="file:///C:/Users/Misha/Documents/GitHub/233300-sedona/hotels.html#">Фейсбук</a>
+        <a class="social-btn social-btn-yt" href="file:///C:/Users/Misha/Documents/GitHub/233300-sedona/hotels.html#">Youtube</a>
       </div>
       <div class="footer-copyright">
         <span>Website by</span>
-        <a class="btn-logo social-btn" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
+        <a class="btn-logo social-btn" href="https://htmlacademy.ru/intensive/htmlcss" style="
+    text-indent: initial;
+">HTML Academy</a>
       </div>
     </div>
   </footer> <!--футер конец-->
-</body>
-</html>
+
+
+</body></html>
