--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Седона</title>
   <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
-</head>
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic,cyrillic-ext" rel="stylesheet">
 <body>
   <header class="main-header">     <!--хедер страницы  -->
     <div class="container">
@@ -94,12 +94,12 @@
             <form class="clearfix" name="select-item" action="#" method="get">
               <div class="form-group data-first">
                 <label for="date-check-in">Дата заезда</label>
-                <input class="field-date" type="date" id="date-check-in">
+                <input class="field-date" type="text" id="date-check-in">
                 <i class="icon-calendar"></i>
               </div>
               <div class="form-group date-second">
                 <label for="date-check-out">Дата выезда</label>
-                <input class="field-date" type="date" id="date-check-out">
+                <input class="field-date" type="text" id="date-check-out">
                 <i class="icon-calendar"></i>
               </div>
               <div class="form-group adults">
