--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="features-first-text">
           <b>Настоящий <span>городок</span></b>
           <span class="number">№1</span>
-          <p>Седона не аттракцион для туристов, там течет своя жизнь</p>
+          <p>Седона — не аттракцион для туристов, <span>там течет своя жизнь</span></p>
         </div>
         <div class="features-first-image">
           <img src="img/index/Features-top.jpg" width="800" height="256" alt="City of Sedona">
@@ -47,7 +47,7 @@
       <ul class="features-item">
         <li class="features-left-image">
           <b class="features-item-title">Жилье</b>
-          <p class="features-item-description text-gray">Рекомендуем пожить как в настоящем <span>мотеле, все как в кино!</span></p>
+          <p class="features-item-description text-gray">Рекомендуем пожить в настоящем <span>мотеле, все как в кино!</span></p>
         </li>
         <li class="features-center-image">
           <b class="features-item-title">Еда</b>
@@ -82,44 +82,44 @@
         <li>
           <b class="features-item-title">Мало <span>туристов</span></b>
           <span class="number">№5</span>
-          <p class="text-gray">Большинство едет в Гранд-Каньон <span>и толпится там</span></p>
+          <p class="text-gray">Большинство едет в Гранд-Каньон и <span>толпится там</span></p>
         </li>
       </ul>
       <div class="index-content"> <!-- блок поиска отелей начало -->
         <h2 class="index-content-title">Заинтересовались?</h2>
         <p class="text-gray">Укажите предполагаемые даты поездки,<br>
           и мы покажем вам лучшие предложения гостиниц в седоне </p>
-          <a class="big-text search decoration" href="#">Поиск гостиниц в Седоне</a>
+          <a class="big-text search decoration" href="#">Поиск гостиницы в Седоне</a>
           <div class="index-search">
             <form class="clearfix" name="select-item" action="#" method="get">
               <div class="form-group data-first">
-                <label for="date-check-in">Дата заезда</label>
+                <label for="date-check-in">Дата заезда:</label>
                 <input class="field-date" type="text" id="date-check-in">
                 <i class="icon-calendar"></i>
               </div>
               <div class="form-group date-second">
-                <label for="date-check-out">Дата выезда</label>
+                <label for="date-check-out">Дата выезда:</label>
                 <input class="field-date" type="text" id="date-check-out">
                 <i class="icon-calendar"></i>
               </div>
               <div class="form-group adults">
-                <label for="adult">Взрослые</label>
+                <label for="adult">Взрослые:</label>
                 <div class="form-group-controls">
-                  <button class="button-control" type="button">-</button>
+                  <button class="button-control" type="button">&#8722</button>
                   <input class="field-number" type="number" min="1" max="4" step="1" id="adult">
                   <button class="button-control" type="button">+</button>
                 </div>
               </div>
               <div class="form-group kids">
-                <label for="child">Дети</label>
+                <label for="child">Дети:</label>
                 <div class="form-group-controls">
-                  <button class="button-control" type="button">-</button>
+                  <button class="button-control" type="button">&#8722</button>
                   <input class="field-number" type="number" min="1" max="4" step="1" id="child">
                   <button class="button-control" type="button">+</button>
                 </div>
               </div>
-              <div class="form-group search-btn">
-                <input class="big-text search" type="submit" value="Найти">
+              <div class="form-group-btn search-btn">
+                <input class="search" type="submit" value="Найти">
               </div>
             </form>
           </div>
