--- a/hotels.html
+++ b/hotels.html
@@ -39,30 +39,30 @@
             <legend>Инфраструктура:</legend>
             <div class="form-group">
               <input class="box" type="checkbox" name="infrastructure1" id="select-waterpool">
-              <label for="select-waterpool">Бассейн</label>
+              <label class="first-check" for="select-waterpool">Бассейн</label>
             </div>
             <div class="form-group">
               <input class="box" type="checkbox" name="infrastructure2" id="select-parking">
-              <label for="select-parking">Парковка</label>
+              <label class="second-check" for="select-parking">Парковка</label>
             </div>
             <div class="form-group">
               <input class="box" type="checkbox" name="infrastructure3" id="select-internet">
-              <label for="select-internet">wi-fi</label>
+              <label class="third-check" for="select-internet">wi-fi</label>
             </div>
           </fieldset>
           <fieldset class="items-selection-title select-center">
             <legend>Тип Жилья:</legend>
             <div class="form-group">
               <input class="box" type="checkbox" name="type1" id="select-hotel">
-              <label for="select-hotel">Гостиница</label>
+              <label class="first-check" for="select-hotel">Гостиница</label>
             </div>
             <div class="form-group">
               <input class="box" type="checkbox" name="type2" id="select-motel">
-              <label for="select-motel">Мотель</label>
+              <label class="second-check" for="select-motel">Мотель</label>
             </div>
             <div class="form-group">
               <input class="box" type="checkbox" name="type3" id="select-apartments">
-              <label for="select-apartments">Апартаменты</label>
+              <label class="third-check" for="select-apartments">Апартаменты</label>
             </div>
           </fieldset>
           <fieldset class="filter-range">
@@ -97,22 +97,22 @@
           <li>
             <a class="text-result-menu active-result-menu" href="#">По рейтингу</a>
           </li>
-          <div class="arrow">
-          <li>
-            <a class="arrow-result-menu" href="#" title="По возрастанию">▲</a>
-          </li>
-          <li>
-            <a class="arrow-result-menu active-arrow" href="#" title="По убыванию">▼</a>
-          </li>
-        </div>
         </ul>
+        <ul class="arrow">
+        <li>
+          <a class="arrow-result-menu" href="#" title="По возрастанию">▲</a>
+        </li>
+        <li>
+          <a class="arrow-result-menu active-arrow" href="#" title="По убыванию">▼</a>
+        </li>
+      </ul>
       </div>
       <article class="result-item clearfix">
         <div class="result-item-left">
           <img src="img/hotels/hotels-top.jpg" width="135" height="90" alt="Amara Resort Spa">
           <div class="result-item-text">
             <h2 class="legend-result">Amara Resort & Spa</h2>
-            <p><span class="type-result">Гостиница</span><span class="price-result">от 4000 р.</span></p>
+            <p><span class="type-result">Гостиница</span><span class="price-result result-first">от 4000 р.</span></p>
             <a class="btn-info" href="#"><span>Подробнее</span></a>
             <a class="btn-buy" href="#"><span>Забронировать</span></a>
           </div>
@@ -127,7 +127,7 @@
           <img src="img/hotels/hotels-middle.jpg" width="135" height="90" alt="Desert Quail Inn">
           <div class="result-item-text">
             <h2 class="legend-result">Desert Quail Inn</h2>
-            <p><span class="type-result">Мотель</span><span class="price-result">от 3000 р.</span></p>
+            <p><span class="type-result">Мотель</span><span class="price-result result-second">от 3000 р.</span></p>
             <a class="btn-info" href="#"><span>Подробнее</span></a>
             <a class="btn-buy" href="#"><span>Забронировать</span></a>
           </div>
