--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic,cyrillic-ext" rel="stylesheet">
+</head>
 <body>
   <header class="main-header">     <!--хедер страницы  -->
     <div class="container">
@@ -41,7 +42,7 @@
           <p>Седона — не аттракцион для туристов, <span>там течет своя жизнь</span></p>
         </div>
         <div class="features-first-image">
-          <img src="img/index/Features-top.jpg" width="800" height="256" alt="City of Sedona">
+          <img src="img/index/features-top.jpg" width="800" height="256" alt="City of Sedona">
         </div>
       </div>
       <ul class="features-item">
@@ -60,7 +61,7 @@
       </ul>
       <div class="features-second">
         <div class="features-second-image">
-          <img src="img/index/Features-bottom.jpg" width="800" height="256" alt="Canyon of Sedona">
+          <img src="img/index/features-bottom.jpg" width="800" height="256" alt="Canyon of Sedona">
         </div>
         <div class="features-second-text">
           <b>Там есть <span>мост дьявола</span></b>
@@ -105,7 +106,7 @@
               <div class="form-group adults">
                 <label for="adult">Взрослые:</label>
                 <div class="form-group-controls">
-                  <button class="button-control" type="button">&#8722</button>
+                  <button class="button-control" type="button">&#8722;</button>
                   <input class="field-number" type="number" min="1" max="4" step="1" id="adult">
                   <button class="button-control" type="button">+</button>
                 </div>
@@ -113,7 +114,7 @@
               <div class="form-group kids">
                 <label for="child">Дети:</label>
                 <div class="form-group-controls">
-                  <button class="button-control" type="button">&#8722</button>
+                  <button class="button-control" type="button">&#8722;</button>
                   <input class="field-number" type="number" min="1" max="4" step="1" id="child">
                   <button class="button-control" type="button">+</button>
                 </div>
