--- a/hotels.html
+++ b/hotels.html
@@ -43,18 +43,18 @@
             </div>
             <div class="form-group box-second">
               <input class="box" type="checkbox" name="infrastructure2" id="select-parking" disabled >
-              <label class="second-check" for="select-parking">Парковка</label>
+              <label class="first-check" for="select-parking">Парковка</label>
             </div>
             <div class="form-group">
               <input class="box" type="checkbox" name="infrastructure3" id="select-internet" disabled>
-              <label class="third-check" for="select-internet">wi-fi</label>
+              <label class="first-check" for="select-internet">wi-fi</label>
             </div>
           </fieldset>
           <fieldset class="items-selection-title select-center">
             <legend>Тип Жилья:</legend>
             <div class="form-group">
               <input class="box" type="checkbox" name="type1" id="select-hotel">
-              <label class="first-check" for="select-hotel">Гостиница</label>
+              <label class="second-check " for="select-hotel">Гостиница</label>
             </div>
             <div class="form-group">
               <input class="box" type="checkbox" name="type2" id="select-motel">
@@ -62,7 +62,7 @@
             </div>
             <div class="form-group">
               <input class="box" type="checkbox" name="type3" id="select-apartments">
-              <label class="third-check" for="select-apartments">Апартаменты</label>
+              <label class="second-check" for="select-apartments">Апартаменты</label>
             </div>
           </fieldset>
           <fieldset class="filter-range">
@@ -79,7 +79,7 @@
               <div class="range-toggle range-toggle-max"></div>
             </div>
             <button class="btn-range" type="submit">Показать</button>
-        </fieldset>
+          </fieldset>
         </form>
       </div>
     </div> <!--сортировка конец-->
@@ -99,13 +99,13 @@
           </li>
         </ul>
         <ul class="arrow">
-        <li>
-          <a class="arrow-result-menu" href="#" title="По возрастанию">▲</a>
-        </li>
-        <li>
-          <a class="arrow-result-menu active-arrow" href="#" title="По убыванию">▼</a>
-        </li>
-      </ul>
+          <li>
+            <a class="arrow-result-menu" href="#" title="По возрастанию">▲</a>
+          </li>
+          <li>
+            <a class="arrow-result-menu active-arrow" href="#" title="По убыванию">▼</a>
+          </li>
+        </ul>
       </div>
       <article class="result-item clearfix">
         <div class="result-item-left">
