--- a/hotels.html
+++ b/hotels.html
@@ -38,7 +38,7 @@
           <fieldset class="items-selection-title select-left">
             <legend>Инфраструктура:</legend>
             <div class="form-group">
-              <input class="box" type="checkbox" name="infrastructure1" id="select-waterpool">
+              <input class="box" type="checkbox" name="infrastructure1" id="select-waterpool" checked>
               <label class="first-check" for="select-waterpool">Бассейн</label>
             </div>
             <div class="form-group box-second">
@@ -53,15 +53,15 @@
           <fieldset class="items-selection-title select-center">
             <legend>Тип Жилья:</legend>
             <div class="form-group">
-              <input class="box" type="checkbox" name="type1" id="select-hotel">
+              <input class="box" type="checkbox" name="type1" id="select-hotel" checked>
               <label class="second-check " for="select-hotel">Гостиница</label>
             </div>
             <div class="form-group">
-              <input class="box" type="checkbox" name="type2" id="select-motel">
+              <input class="box" type="checkbox" name="type2" id="select-motel" checked>
               <label class="second-check" for="select-motel">Мотель</label>
             </div>
             <div class="form-group">
-              <input class="box" type="checkbox" name="type3" id="select-apartments">
+              <input class="box" type="checkbox" name="type3" id="select-apartments" checked>
               <label class="second-check" for="select-apartments">Апартаменты</label>
             </div>
           </fieldset>
